Updated types for API endpoints
This uses zod to validate the API response so we can have correctly typed data
in the application

--- a/apps/admin-x-activitypub/package.json
+++ b/apps/admin-x-activitypub/package.json
@@ -71,6 +71,7 @@
     "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "use-debounce": "10.0.4"
+    "use-debounce": "10.0.4",
+    "zod": "3.24.2"
   }
 }
