--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -242,6 +242,7 @@
     "@playwright/test": "1.50.1",
     "@tryghost/express-test": "0.13.15",
     "@tryghost/webhook-mock-receiver": "0.2.14",
+    "@types/bookshelf": "1.2.9",
     "@types/common-tags": "1.8.4",
     "@types/node": "22.13.5",
     "c8": "8.0.1",
