--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -883,8 +883,27 @@ jobs:
         run: tb check
       - name: Check auth
         run: tb --host=${{ secrets.TB_HOST }} --token=${{ secrets.TB_ADMIN_TOKEN }} auth info
-      - name: Check the current workspace
-        run: tb workspace current
+      - name: Try to delete previous Branch
+        run: |
+          output=$(tb --host ${{ secrets.TB_HOST }} --token ${{ secrets.TB_ADMIN_TOKEN }} branch ls)
+          BRANCH_NAME="tmp_ci_${_NORMALIZED_BRANCH_NAME}_${{ github.event.pull_request.number }}"
+          # Check if the branch name exists in the output
+          if echo "$output" | grep -q "\b$BRANCH_NAME\b"; then
+            tb \
+            --host ${{ secrets.TB_HOST }} \
+            --token ${{ secrets.TB_ADMIN_TOKEN }} \
+            branch rm $BRANCH_NAME \
+            --yes
+          else
+            echo "Skipping clean up: The Branch '$BRANCH_NAME' does not exist."
+          fi
+      - name: Create new test Branch with data
+        run: |
+          tb \
+          --host ${{ secrets.TB_HOST }} \
+          --token ${{ secrets.TB_ADMIN_TOKEN }} \
+          branch create tmp_ci_${_NORMALIZED_BRANCH_NAME}_${{ github.event.pull_request.number }} \
+          ${_ENV_FLAGS}
           
 
   job_ghost-cli:
