--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -904,6 +904,53 @@ jobs:
           --token ${{ secrets.TB_ADMIN_TOKEN }} \
           branch create tmp_ci_${_NORMALIZED_BRANCH_NAME}_${{ github.event.pull_request.number }} \
           ${_ENV_FLAGS}
+      - name: Deploy changes to the test Branch
+        run: |
+          DEPLOY_FILE=./deploy/${VERSION}/deploy.sh
+          if [ ! -f "$DEPLOY_FILE" ]; then
+              echo "$DEPLOY_FILE not found, running default tb deploy command"
+              tb deploy
+          fi
+      - name: Custom deployment to the test Branch
+        run: |
+          DEPLOY_FILE=./deploy/${VERSION}/deploy.sh
+          if [ -f "$DEPLOY_FILE" ]; then
+              echo "$DEPLOY_FILE found"
+              if ! [ -x "$DEPLOY_FILE" ]; then
+                echo "Error: You do not have permission to execute '$DEPLOY_FILE'. Run:"
+                echo "> chmod +x $DEPLOY_FILE"
+                echo "and commit your changes"
+                exit 1
+              else
+                $DEPLOY_FILE
+              fi
+          fi
+      - name: Append fixtures
+        run: |
+          if [ -f ./scripts/append_fixtures.sh ]; then
+          echo "append_fixtures script found"
+          ./scripts/append_fixtures.sh
+          fi
+      - name: Run fixture tests
+        run: |
+          if [ -f ./scripts/exec_test.sh ]; then
+          ./scripts/exec_test.sh
+          fi
+
+      - name: Try to delete previous Branch
+        run: |
+          output=$(tb --host ${{ secrets.TB_HOST }} --token ${{ secrets.TB_ADMIN_TOKEN }} branch ls)
+          BRANCH_NAME="tmp_ci_${_NORMALIZED_BRANCH_NAME}_${{ github.event.pull_request.number }}"
+          # Check if the branch name exists in the output
+          if echo "$output" | grep -q "\b$BRANCH_NAME\b"; then
+            tb \
+                --host ${{ secrets.TB_HOST }} \
+                --token ${{ secrets.TB_ADMIN_TOKEN }} \
+                branch rm $BRANCH_NAME \
+                --yes
+          else
+            echo "Skipping clean up: The Branch '$BRANCH_NAME' does not exist."
+          fi
           
 
   job_ghost-cli:
