--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1280,6 +1280,9 @@ jobs:
     ]
     name: Deploy Tinybird
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ghost/tinybird-dedicated
     if: always() && needs.job_setup.outputs.changed_tinybird == 'true' && needs.job_setup.result == 'success' && needs.job_lint.result == 'success' && needs.job_unit-tests.result == 'success' && needs.job_tinybird.result == 'success'
     steps:
       - name: Checkout
