--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -67,7 +67,7 @@
         "@ebay/nice-modal-react": "1.2.13",
         "@radix-ui/react-avatar": "1.1.0",
         "@radix-ui/react-checkbox": "1.1.1",
-        "@radix-ui/react-dialog": "1.1.4",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "2.1.3",
         "@radix-ui/react-form": "0.0.3",
         "@radix-ui/react-popover": "1.1.6",
