--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
     "**/dist/**": true,
     "**/ghost.map": true,
     "**/node_modules": true,
-    "ghost/core/core/built/**": true
+    "ghost/core/core/built/**": true,
+    "ghost/tinybird-dedicated/.diff_tmp/**": true
   },
   "tailwindCSS.experimental.classRegex": [
     ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
