Modified CI flow to ignore changes to Tinybird files for core tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,8 @@ jobs:
               - *shared
               - 'ghost/**'
               - '!ghost/admin/**'
+              - '!ghost/tinybird-dedicated/**'
+              - '!ghost/tinybird/**'
             admin:
               - *shared
               - 'ghost/admin/**'
