Changed the cleanup branch step to always run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -966,6 +966,7 @@ jobs:
           fi
 
       - name: Try to delete previous Branch
+        if: always()
         run: |
           output=$(tb --host ${{ secrets.TB_HOST }} --token ${{ secrets.TB_ADMIN_TOKEN }} branch ls)
           # Check if the branch name exists in the output
