--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -874,7 +874,7 @@ jobs:
       - name: Check secrets
         if: github.event_name == 'pull_request'
         env:
-          TB_ADMIN_TOKEN: ${{ secrets.TB_ADMIN_TOKEN }}
+          TB_ADMIN_TOKEN: ${{ secrets.TB_ADMIN_TOKEN_STAGING }}
         run: |
           if [ -z "${{ env.TB_ADMIN_TOKEN }}" ]; then
             echo "Tinybird admin token is not available. Did you open this PR from a fork?"
