--- a/apps/admin-x-activitypub/package.json
+++ b/apps/admin-x-activitypub/package.json
@@ -66,11 +66,12 @@
   "dependencies": {
     "@radix-ui/react-form": "0.0.3",
     "@tryghost/admin-x-design-system": "0.0.0",
-    "@tryghost/shade": "0.0.0",
     "@tryghost/admin-x-framework": "0.0.0",
+    "@tryghost/shade": "0.0.0",
     "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "use-debounce": "10.0.4"
+    "use-debounce": "10.0.4",
+    "zustand": "5.0.3"
   }
 }
