Add metascraper-amazon to correctly display Amazon link cards (#22417)

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -206,6 +206,7 @@
     "lodash": "4.17.21",
     "luxon": "3.5.0",
     "metascraper": "5.45.15",
+    "metascraper-amazon": "5.45.10",
     "metascraper-author": "5.45.10",
     "metascraper-description": "5.45.10",
     "metascraper-image": "5.45.10",
