--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dev:admin": "node .github/scripts/dev.js --admin",
     "dev:ghost": "node .github/scripts/dev.js --ghost",
     "dev": "node .github/scripts/dev.js",
-    "fix": "yarn cache clean && rimraf -g '**/node_modules' && yarn",
+    "fix": "yarn cache clean && rimraf -g '**/node_modules' && yarn && yarn nx reset",
     "knex-migrator": "yarn workspace ghost run knex-migrator",
     "setup": "yarn && git submodule update --init && nx run-many -t build:ts && NODE_ENV=development node .github/scripts/setup.js",
     "reset:data": "cd ghost/core && node index.js generate-data --clear-database --quantities members:100000,posts:500 --seed 123",
