--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,7 +178,6 @@ jobs:
           FORCE_COLOR: 0
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: yarn
 
       - name: Install dependencies
         run: yarn install --prefer-offline --frozen-lockfile
@@ -459,6 +458,7 @@ jobs:
           FORCE_COLOR: 0
         with:
           node-version: ${{ matrix.node }}
+          cache: yarn
 
       - name: Restore caches
         uses: ./.github/actions/restore-cache
@@ -470,7 +470,12 @@ jobs:
         with:
           timezoneLinux: "America/New_York"
 
-      - run: yarn nx affected -t test:unit --base=${{ needs.job_setup.outputs.BASE_COMMIT }}
+      # Build any remaining assets not covered by job_setup
+      - name: Build remaining assets
+        run: yarn nx run-many -t build
+
+      # Run tests with better error reporting
+      - run: yarn nx affected -t test:unit --base=${{ needs.job_setup.outputs.BASE_COMMIT }} --verbose
 
       - uses: actions/upload-artifact@v4
         if: startsWith(matrix.node, '18')
