--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -470,6 +470,10 @@ jobs:
         with:
           timezoneLinux: "America/New_York"
 
+      # Ensure all built packages are built before running tests (admin is built in job_setup)
+      - name: Build remaining assets
+        run: yarn nx run-many -t build --exclude=ghost-admin
+
       - run: yarn nx affected -t test:unit --base=${{ needs.job_setup.outputs.BASE_COMMIT }}
 
       - uses: actions/upload-artifact@v4
