Added Stats React app
ref ANAL-157

- ATM traffic analytics is a combination of Ember and React components. This PR creates a new "Stats" React app that uses Shade

--- a/ghost/admin/package.json
+++ b/ghost/admin/package.json
@@ -191,7 +191,8 @@
               "@tryghost/admin-x-demo",
               "@tryghost/admin-x-settings",
               "@tryghost/admin-x-activitypub",
-              "@tryghost/posts"
+              "@tryghost/posts",
+              "@tryghost/stats"
             ],
             "target": "build"
           }
@@ -209,7 +210,8 @@
               "@tryghost/admin-x-demo",
               "@tryghost/admin-x-settings",
               "@tryghost/admin-x-activitypub",
-              "@tryghost/posts"
+              "@tryghost/posts",
+              "@tryghost/stats"
             ],
             "target": "build"
           }
