Updated install script and VSCode settings for tinybird cli

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,5 @@
   ],
   "git.detectSubmodules": false,
   "tinybird.dataProjectSubdir": "ghost/web-analytics",
-  "tinybird.venv": "ghost/web-analytics/.venv"
+  "tinybird.venv": ".venv"
 }
