Updated CI job to use version in .tinyenv for custom deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -946,6 +946,8 @@ jobs:
           fi
       - name: Custom deployment to the test Branch
         run: |
+          source .tinyenv
+          echo $VERSION
           DEPLOY_FILE=./deploy/${VERSION}/deploy.sh
           echo $DEPLOY_FILE
           if [ -f "$DEPLOY_FILE" ]; then
